@@ -1,17 +1,10 @@
-.DS_Store
-vignettes/figure/
-vignettes/metagenomeSeq.tex
-vignettes/.Rhistory
-man/.Rapp.history
-metagenomeSeq.synctex.gz
-metagenomeSeq-concordance.tex
-metagenomeSeq.toc
-metagenomeSeq.log
-metagenomeSeq.pdf
-inst/.DS_Store
-vignettes/fitTimeSeries-concordance.tex
-vignettes/fitTimeSeries.log
+*.Rhistory
+*.DS_Store
+*.tex
+*.Rapp.history
+*synctex.gz
+*.toc
+*.log
 vignettes/fitTimeSeries.pdf
-vignettes/fitTimeSeries.synctex.gz
-vignettes/fitTimeSeries.tex
-vignettes/fitTimeSeries.toc
+vignettes/metagenomeSeq.pdf
+vignettes/figure/
