@@ -38,6 +38,7 @@ exportMat,
 exportStats,
 fitDO,
 fitMeta,
+fitLogNormal,
 fitPA,
 fitSSTimeSeries,
 fitTimeSeries,
