@@ -1,10 +1,11 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/fitMeta.R
-\name{fitMeta}
-\alias{fitMeta}
-\title{Computes a slightly modified form of Metastats.}
+% Please edit documentation in R/fitLogNormal.R
+\name{fitLogNormal}
+\alias{fitLogNormal}
+\title{Computes a log-normal linear model and permutation based p-values.}
 \usage{
-fitMeta(obj, mod, useCSSoffset = TRUE, B = 1000, coef = 2, sl = 1000)
+fitLogNormal(obj, mod, useCSSoffset = TRUE, B = 1000, coef = 2,
+  sl = 1000)
 }
 \arguments{
 \item{obj}{A MRexperiment object with count data.}
